fixes layout shifts in both game sections

--- a/src/index.css
+++ b/src/index.css
@@ -29,15 +29,15 @@ body {
 }
 
 .contactInput {
-  @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] placeholder-gray-500 transition-all focus:border-sungold/80 focus:text-sungold text-sungold/80 hover:border-sungold/40;
+  @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] placeholder-gray-500 transition-all focus:border-sungold/80 focus:text-sungold text-sungold/70 hover:border-sungold/40;
 }
 
 .primaryBtn {
-  @apply px-6 py-2 mx-2 border rounded-full uppercase text-xs tracking-widest duration-300 border-sungold/40 hover:text-sungold;
+  @apply px-6 py-2 mx-2 border rounded-full uppercase text-xs tracking-widest duration-300 border-[#5c0af7] hover:text-sungold;
 }
 
 .secondaryBtn {
-  @apply px-6 py-2 mx-2 border rounded-full uppercase text-xs tracking-widest duration-300 border-[#5c0af7] hover:text-sungold;
+  @apply px-6 py-2 mx-2 border rounded-full uppercase text-xs tracking-widest duration-300 border-sungold/70 hover:text-sungold;
 
 }
 
